--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,8 +12,10 @@
   },
   "scripts": {
     "dev": "cd ..;hugo serve",
-    "generate": "node read-public-google-spreadsheet.js",
-    "build": "cd ..;hugo"
+    "generate": "node read-public-google-spreadsheet.js 2000",
+    "thumbnails": "node generate-thumbnails.js",
+    "build": "cd ..;hugo",
+    "deploy": "cd ..;source config/config.deploy.sh;rsync -avzu ../docs/ $REMOTE"
   },
   "repository": {
     "type": "git",
