--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,6 +15,7 @@
     "generate": "node read-public-google-spreadsheet.js 2000",
     "thumbnails": "node generate-thumbnails.js",
     "build": "cd ..;hugo",
+    "clean-posts": "rm ../content/posts/*",
     "deploy": ". ./config/config.deploy.sh;rsync -avzu ../docs/ $REMOTE"
   },
   "repository": {
